[workspace]
resolver = "2"
members = [
    "csv-to-midi-core",
    "csv-to-midi-cli", 
    "csv-to-midi-wasm"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/csv-to-midi"
description = "Convert CSV audio analysis data to MIDI files"

[workspace.dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
