[package]
name = "csv-to-midi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
csv.workspace = true
serde.workspace = true
thiserror.workspace = true
midly = "0.5"  # MIDI library for Rust

[dev-dependencies]
tempfile = "3.8"
