[package]
name = "csv-to-midi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
csv.workspace = true
serde.workspace = true
thiserror.workspace = true
midly = "0.5"  # MIDI library for Rust
hound = { version = "3.5", optional = true }  # WAV file reading/writing
rubato = { version = "0.15", optional = true } # Audio sample rate conversion
claxon = { version = "0.4", optional = true }  # FLAC file reading

[features]
default = []
audio = ["dep:hound", "dep:rubato", "dep:claxon"]

[dev-dependencies]
tempfile = "3.8"
