[package]
name = "csv-to-midi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
csv.workspace = true
serde.workspace = true
thiserror.workspace = true
midly = "0.5"  # MIDI library for Rust
hound = { version = "3.5", optional = true }  # WAV file reading/writing
rubato = { version = "0.15", optional = true } # Audio sample rate conversion
claxon = { version = "0.4", optional = true }  # FLAC file reading
rustfft = { version = "6.0", optional = true }  # FFT for spectral analysis
pyin = { version = "1.2.0", optional = true }  # pYIN pitch detection (vendored)

[features]
default = []
audio = ["dep:hound", "dep:rubato", "dep:claxon", "dep:rustfft"]
pyin = ["dep:pyin", "audio"]

[dev-dependencies]
tempfile = "3.8"
rand = "0.8"
